# drukbox

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/workflows/: on-main-merge.yml  on-pull-request.yml  publish-sandbox-image.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_host_sizing.py
api-tests/: README.md  package-lock.json  package.json  playwright.config.js
api-tests/tests/: full-api.spec.js
api-tests/tests/helpers/: assertions.js  client.js  data.js  env.js  poll.js
docs/: add-a-provider.md  api.md  architecture.md  deploy.md  networking.md  security.md
env/: test.env
images/local/: Dockerfile  entrypoint.sh
src/: conftest.py
src/api/: app.py
src/api/tests/: test_health.py
src/core/: __init__.py  database.py  exceptions.py  settings.py
src/core/tests/: test_settings.py
src/diagnostics/: api.py  checks.py
src/diagnostics/tests/: test_checks.py  test_doctor.py
src/hosts/: api.py  auth.py  deps.py  exceptions.py  janitor.py  models.py  pool.py  schemas.py  service.py
src/hosts/scripts/: sandbox_bootstrap.sh
src/hosts/tests/: conftest.py  test_api.py  test_async_boundaries.py  test_bootstrap.py  test_janitor.py  test_models.py  test_pool.py  test_tailscale_optional.py
src/http_proxies/: api.py  deps.py  exceptions.py  schemas.py  service.py
src/http_proxies/tests/: test_api.py  test_service.py
src/networking/: tailscale.py  tailscale_settings.py
src/networking/tests/: test_tailscale.py  test_tailscale_diagnose.py
src/providers/: __init__.py  base.py  capabilities.py  exceptions.py  registry.py  setup_script.py  ssh_keys.py
src/providers/aws/: __init__.py  api.py  exceptions.py  provider.py  settings.py
src/providers/aws/tests/: test_api.py  test_diagnose.py  test_provider.py
src/providers/docker/: __init__.py  api.py  exceptions.py  provider.py  settings.py
src/providers/docker/tests/: test_api.py  test_provider.py
src/providers/exe/: __init__.py  api.py  exceptions.py  provider.py  settings.py
src/providers/exe/tests/: test_api.py  test_diagnose.py  test_provider.py
src/providers/exoscale/: __init__.py  api.py  exceptions.py  provider.py  settings.py
src/providers/exoscale/tests/: test_api.py  test_diagnose.py  test_provider.py
src/providers/hetzner/: __init__.py  api.py  exceptions.py  provider.py  settings.py
src/providers/hetzner/tests/: test_api.py  test_diagnose.py  test_provider.py
src/providers/tests/: test_capabilities.py  test_registry.py  test_setup_script.py
